--- a/scss/components/_grid.scss
+++ b/scss/components/_grid.scss
@@ -3,13 +3,11 @@
 /* ============================================ */
 
 .grid {
-    max-width: 1000px;
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    max-width: 1000px;
+    grid-template-columns: repeat(4, minmax(200px, 1fr));
     grid-template-rows: repeat(3, 1fr);
     gap: 25px;
-   justify-items: center;
-   align-items: center;
 }
 
 
